--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Tasks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  background-color: orange;
+}
+p {
+  margin: 30px;
+  background-color: red;
+  border-radius: 50px;
+  color: white;
+  padding: 10px;
+  font-weight: bold;
+}
