--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,3 +1,11 @@
 <h2><%= @task.title %></h2>
-<p><%= @task.details %></p>
-<p><%= @task.completed %></p>
+<p>Description: <%= @task.details %></p>
+<p>Completed: <%= @task.completed %></p>
+<br>
+<%= link_to "Back to list", tasks_path %>
+<br>
+<%= link_to "Edit this task", edit_path %>
+<br>
+<%= link_to "Delete this task", task_path,
+      method: :delete,
+      data: { confirm: "Are you sure?" } %>
